--- a/src/main/html/css/style.css
+++ b/src/main/html/css/style.css
@@ -227,7 +227,7 @@ h2 {
   color: #08b;
 }
 .navbar-default .nav > li .details {
-  color: #000000;
+  color: #ffffff;
   text-transform: none;
   font-size: 15px;
   font-weight: normal;
