--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -86,10 +86,16 @@
         }
     }
 
-    ol, ul {
-        list-style: none;
+
+    ol {
+        list-style-type: decimal;
+        line-height: 20px;
     }
 
+    ul {
+        list-style-type: none;
+    }
+    
     h1, h2, h3, h4, h5, h6 {
         a {
             text-decoration: none;
