--- a/src/main/less/style.less
+++ b/src/main/less/style.less
@@ -285,7 +285,7 @@ h2 {
 }
 
 .navbar-default .nav > li .details {
-	color: #000000;
+	color: #ffffff;
 	text-transform: none;
 	font-size: 15px;
 	font-weight: normal;
